cloud/aruba-kaas/mongodb-fix-fsgroup.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nuvolaris-mongodb
  namespace: nuvolaris
spec:
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
